# jmlang

./: CMakeLists.txt  README.md
cmake/: LLVM.cmake
include/jmlang/: jmlang.h
include/jmlang/Base/: Argument.h  Buffer.h  Debug.h  IntrusivePtr.h  Type.h  Util.h  buffer_t.h
include/jmlang/IR/: Argument.h  Expr.h  ExprCall.h  ExprVariable.h  Function.h  IR.h  IREquality.h  IRHandle.h  IRMatch.h  IRMutator.h  IROperator.h  IRPrinter.h  IRVisitor.h  Parameter.h  Reduction.h  Schedule.h  Scope.h  Substitute.h
include/jmlang/JIT/: JITModule.h  LLVMHeaders.h
include/jmlang/Lang/: Func.h  Image.h  Param.h  RDom.h  Tuple.h  Var.h
include/jmlang/Optimizer/: Simplify.h
lib/Base/: Type.cc  Util.cc
lib/IR/: IREquality.cc  IRMatch.cc  IRMutator.cc  IROperator.cc  IRPrinter.cc  Parameter.cc  Reduction.cc  Substitute.cc
lib/JIT/: JITModule.cc
lib/Lang/: RDom.cc  Tuple.cc
test/: CMakeLists.txt  test01.cc
